Unity2019/2019.1/System-Requirements.md
# Unity 2019.1

https://unity3d.com/unity/whats-new/2019.1.0

## System Requirements

- [For development](#for-development)
- [Additional platform development requirements:](#additional-platform-development-requirements)
- [For running Unity games](#for-running-unity-games)


### For development

#### OS: Windows 7 SP1+, 8, 10, 64-bit versions only; macOS 10.12+. (Server versions of Windows & OS X are not tested.)

#### CPU: SSE2 instruction set support.

#### GPU: Graphics card with DX10 (shader model 4.0) capabilities.

#### The rest mostly depends on the complexity of your projects.

### Additional platform development requirements:

*   iOS: Mac computer running minimum macOS 10.12.6 and Xcode 9.4 or higher.
    
*   Android: Android SDK and Java Development Kit (JDK); IL2CPP scripting backend requires Android NDK.
    
*   Universal Windows Platform: Windows 10 (64-bit), Visual Studio 2015 with C++ Tools component or later and Windows 10 SDK
    

### For running Unity games

#### Generally content developed with Unity can run pretty much everywhere. How well it runs is dependent on the complexity of your project. More detailed requirements:

*   Desktop:
    
    *   OS: Windows 7 SP1+, macOS 10.12+, Ubuntu 12.04+, SteamOS+
    *   Graphics card with DX10 (shader model 4.0) capabilities.
    *   CPU: SSE2 instruction set support.
*   iOS player requires iOS 9.0 or higher.
    
*   Android: OS 4.1 or later; ARMv7 CPU with NEON support or Atom CPU; OpenGL ES 2.0 or later.
    
*   WebGL: Any recent desktop version of Firefox, Chrome, Edge or Safari.
    
*   Universal Windows Platform: Windows 10 and a graphics card with DX10 (shader model 4.0) capabilities
    

#### Revision: 292b93d75a2c Generated: 2019-04-16 10:07